--- a/inference/norm-flow/minibatch/minibatch-optim-hyperparam.ipynb
+++ b/inference/norm-flow/minibatch/minibatch-optim-hyperparam.ipynb
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a143fe08",
+   "id": "fccc4d23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,8 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "4dbc6bcc",
+   "execution_count": 55,
+   "id": "b8a86f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,26 +289,27 @@
     "        n_sample=100,\n",
     "        n_u=len(np.unique(DATA['u'])), \n",
     "        n_w=len(np.unique(DATA['w'])),\n",
-    "        **DATA).item()"
+    "        **DATA).item()\n",
+    "    return loss"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55e564b7",
+   "id": "1f60e4e4",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2021-05-31 18:20:42,216]\u001b[0m A new study created in memory with name: no-name-298fa1d3-9576-4214-adb0-2ceee898a98d\u001b[0m\n"
+      "\u001b[32m[I 2021-05-31 18:32:18,736]\u001b[0m A new study created in memory with name: no-name-cc33d085-845f-4375-8622-5f7bd9fbf915\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cec352b514294f8c9b537a33483985ed",
+       "model_id": "33d7d0f55bc14ba389ee511b31cd598f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +323,7 @@
    ],
    "source": [
     "study = optuna.create_study(direction=\"minimize\")\n",
-    "study.optimize(objective, n_trials=100)\n",
+    "study.optimize(objective, n_trials=300)\n",
     "\n",
     "study.best_params"
    ]
@@ -330,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88664249",
+   "id": "9d8a45ba",
    "metadata": {},
    "outputs": [],
    "source": []
