--- a/inference/norm-flow/minibatch/minibatch.ipynb
+++ b/inference/norm-flow/minibatch/minibatch.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "from inference.loss_minibatch import LossMinibatch\n",
     "from inference.train_minibatch import train_minibatch\n",
-    "from inference.plannar import NormalizingFlow\n",
+    "from inference.flows import NormalizingFlow\n",
     "\n",
     "from plot.plot_hist_loss import plot_loss\n",
     "from plot.plot_posterior import plot_posterior\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc4aa448",
+   "id": "e930e367",
    "metadata": {},
    "source": [
     "# Test 1"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f24765f0",
+   "id": "665486c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07327642",
+   "id": "7de258a4",
    "metadata": {},
    "source": [
     "# Test 2"
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c2266065",
+   "id": "f5c41061",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0f8fbbb2",
+   "id": "84553e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aab4e300",
+   "id": "9018dc81",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d469caac",
+   "id": "e04fdbde",
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1be78bc3",
+   "id": "c55b7968",
    "metadata": {},
    "source": [
     "# Test 3"
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a6b6c04",
+   "id": "0147e36d",
    "metadata": {},
    "source": [
     "# Test 4"
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e3acec83",
+   "id": "6f51f16d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b2b1aa65",
+   "id": "b06aa1af",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "760c0e59",
+   "id": "b697137a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fbb3671e",
+   "id": "2a0ac10b",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b3509d26",
+   "id": "f77edcb5",
    "metadata": {
     "scrolled": true
    },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604e7072",
+   "id": "42b194c0",
    "metadata": {},
    "source": [
     "# Test 5"
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c191e6c2",
+   "id": "0f2e044b",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "eca74c46",
+   "id": "7c8b6c45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cf926975",
+   "id": "4d44851f",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3201abf6",
+   "id": "aa98e1d2",
    "metadata": {
     "scrolled": true
    },
