--- a/planning/using-a2c/using-a2c.ipynb
+++ b/planning/using-a2c/using-a2c.ipynb
@@ -439,7 +439,7 @@
    "execution_count": 14,
    "id": "ca4f0e25",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
