--- a/planning/using-a2c/check_discontinuous_runs.ipynb
+++ b/planning/using-a2c/check_discontinuous_runs.ipynb
@@ -30,18 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "b052403d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp1=A2C.load('runs/discont_exp/run_1')\n",
-    "sp10 = A2C.load('runs/aug_24/sparse_reward_10')\n",
-    "sp20 = A2C.load('runs/aug_24/sparse_reward_20')\n",
-    "sp30 = A2C.load('runs/aug_24/sparse_reward_30')\n",
-    "sp50 = A2C.load('runs/aug_24/sparse_reward_50')\n",
+    "# exp1=A2C.load('runs/discont_exp/run_1')\n",
+    "# sp10 = A2C.load('runs/aug_24/sparse_reward_10')\n",
+    "# sp20 = A2C.load('runs/aug_24/sparse_reward_20')\n",
+    "# sp30 = A2C.load('runs/aug_24/sparse_reward_30')\n",
+    "# sp50 = A2C.load('runs/aug_24/sparse_reward_50')\n",
     "\n",
-    "\n",
+    "av1 = A2C.load('runs/aug_24/avoid_forget_1')\n",
+    "av3 = A2C.load('runs/aug_24/avoid_forget_3')\n",
+    "av10 = A2C.load('runs/aug_24/avoid_forget_10')\n",
+    "av20 = A2C.load('runs/aug_24/avoid_forget_20')\n",
+    "av30 = A2C.load('runs/aug_24/avoid_forget_30')\n",
     "\n",
     "# av4 = A2C.load('runs/aug_23/exam_based_4')\n",
     "# av10 = A2C.load('runs/aug_23/exam_based_10')\n",
@@ -52,24 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "78222cb8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "10800"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model=sp30\n",
-    "model.env.t_max"
+    "model=av1\n",
+    "model.env.break_length"
    ]
   },
   {
@@ -85,7 +89,6 @@
     "#     time_per_iter=3,\n",
     "#     n_iter_per_session=100,\n",
     "#     n_session=5,\n",
-    "    t_max=model.env.t_max,\n",
     "    initial_forget_rates=model.env.all_forget_rates,\n",
     "    initial_repetition_rates=model.env.all_repetition_rates,\n",
     "    delta_coeffs=np.array([3, 20]),\n",
@@ -130,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fa82dd88",
+   "id": "825499c6",
    "metadata": {},
    "outputs": [
     {
